tests/verifier/fail/test21.ial
data foo ();

function void wrong_load_data()
{
    register uint8[] a;

    block entry
    {
        a = load.data (foo);
        leave;
    }
}
